--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <img class="logo" src="images/index.svg" alt="Logo">
                     <div class="my-name" id="myName">Owen Carson</div>
                 </a>
-                <div id="head-links">
+                <div class="libre-franklin-400" id="head-links">
                     <a href="mailto:contact@example.com" class="clickable">Email</a>
                     <a href="#" class="clickable">Resume</a>
                 </div>
@@ -53,8 +53,7 @@
                 <div class="flex-row" id="info">
                     <div class="flex-3 libre-franklin-400" id="blurb">
                         <p><span class="libre-franklin-600">Owen Carson</span> is a designer and developer based in
-                            Providence, RI. He cares about creative
-                            education and having a handy internet.</p>
+                            Providence, RI. He cares about creative education and making the internet truly for everyone.</p>
                     </div>
                     <div class="flex-1"></div>
                 </div>
@@ -103,14 +102,14 @@
     <div class="sub-nav">
         <div class="nav">
             <div class="horizontal">
-                <a href="#" class="clickable libre-franklin-600">About</a>
+                <div class="libre-franklin-600">About Me</div>
                 <span id="about-breadcrumb-separator">&nbsp;&nbsp;/&nbsp;&nbsp;</span>
-                <a href="#" class="clickable" id="about-active-breadcrumb">Now</a>
+                <div class="clickable" id="about-active-breadcrumb">Now</div>
             </div>
             <div id="about-head-links">
-                <a href="#" class="clickable" data-about="now">Now</a>
-                <a href="#" class="clickable active" data-about="bio">Bio</a>
-                <a href="#" class="clickable" data-about="colophon">Colophon</a>
+                <a href="#" class="clickable active" data-about="now">Now</a>
+                <a href="#" class="clickable" data-about="bio">Bio</a>
+                <!-- Removed colophon link -->
             </div>
         </div>
     </div>
