--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="horizontal">
                             <a href="#" class="clickable libre-franklin-600" id="selected-projects">Featured Projects</a>
                             <span id="breadcrumb-separator" style="display: none;">&nbsp;&nbsp;/&nbsp;&nbsp;</span>
-                            <a href="#" class="clickable" id="active-breadcrumb"></a>
+                            <a class="clickable" id="active-breadcrumb"></a>
                         </div>
                         <!-- <div id="head-links">
                             <a href="#" class="clickable active" data-category="Featured">Featured</a>
