--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 <body>
     <!-- <div class="glow-cursor" id="glow"></div> -->
     <div class="App libre-franklin-400">
-        <img class="bg-vector" src="./images/cloud.svg"></img>
+        <img class="bg-vector" src="./images/cloud.svg" alt="hand drawn cloud outline"></img>
 
         <!-- Navbar -->
         <nav class="sticky-nav" id="stickyNav">
             <div class="nav libre-franklin-600">
                 <a href="#" class="horizontal" id="logoLink">
                     <div class="logo-container"></div>
-                    <img class="logo" src="images/index.svg" alt="Logo">
+                    <img class="logo" src="images/index.svg" alt="hand drawn flower logo">
                     <div class="my-name" id="myName">Owen Carson</div>
                 </a>
                 <div class="libre-franklin-400" id="head-links">
-                    <a href="mailto:contact@example.com" class="clickable">Email</a>
-                    <a href="#" class="clickable">Resume</a>
+                    <a href="mailto:owenccarson@gmail.com" class="clickable">Email</a>
+                    <a href="https://drive.google.com/file/d/1UuITP3-BgWoIht0KyofDzppWU6N3GXZk/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="clickable">Resume</a>
                 </div>
             </div>
         </nav>
