--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="horizontal">
                 <div class="libre-franklin-600">About Me</div>
                 <span id="about-breadcrumb-separator">&nbsp;&nbsp;/&nbsp;&nbsp;</span>
-                <div class="clickable" id="about-active-breadcrumb">Now</div>
+                <div id="about-active-breadcrumb">Now</div>
             </div>
             <div id="about-head-links">
                 <a href="#" class="clickable active" data-about="now">Now</a>
