--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <script src="scripts/about.js"></script>
 
 
-    <script src="scripts/cursor.js"></script>
+    <!-- <script src="scripts/cursor.js"></script> -->
 
 </body>
 
